<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BarcodeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="360dp"
        android:layout_height="123dp"
        android:layout_marginTop="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="186dp"
            android:layout_height="65dp"
            android:onClick="ScanButton"
            android:text="@string/scan" />

        <Button
            android:id="@+id/Inputbutton"
            android:layout_width="180dp"
            android:layout_height="66dp"
            android:layout_weight="1"
            android:onClick="InputButton"
            android:text="@string/input" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="230dp"
        android:layout_height="39dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="76dp"
        android:gravity="center"
        android:text="@string/results"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/addbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/addbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="177dp"
        android:onClick="AddButton"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />


    <EditText
        android:id="@+id/name"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="360dp"
        android:layout_weight="1"
        android:hint="@string/add_name"
        android:imeOptions="actionNext"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_number"
            android:inputType="number" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/categories"
            android:spinnerMode="dropdown"></Spinner>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>