<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddformActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="277dp"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name">

        <EditText
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/add_number"
            android:inputType="number" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/categories"
            android:spinnerMode="dropdown"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="64dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/cancleButton"
            android:layout_width="219dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:onClick="CancelClick"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:onClick="SaveClick"
            android:text="@string/save" />

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="284dp"
        android:layout_height="50dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="230dp"
        android:layout_weight="1"
        android:hint="@string/add_name"
        android:imeOptions="actionNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></EditText>

</androidx.constraintlayout.widget.ConstraintLayout>